--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap');
 
 :root {
+    /*fontes*/
     --font-titulo: 'Rubik', sans-serif;
     --font-texto: 'Montserrat', sans-serif;
     --font-menu: 'Comfortaa', cursive;
@@ -14,89 +15,80 @@
     --cor-texto: #F3EFE0;
 }
 
-* {
+* { /*reset CSS*/
     margin: 0;
     padding: 0;
 }
-
 body {
     background-color: var(--cor-primaria);
     color: var(--cor-texto);
     box-sizing: border-box;
 }
-
 .cabecalho {
     display: flex;
     justify-content: center;
     padding: 2%;
     background-color: #000000;
 }
-
 .cabecalho__menu {
     display: flex;
     gap: 50px;
 }
-
 .cabecalho__menu__link {
     text-decoration: none;
     font-family: var(--font-menu);
     font-size: 25px;
     color: var(--cor-secundaria);
 }
-
 .cabecalho__menu__link:hover {
     color: #FFFFFF;
 }
-
-.principal {
+.principal { 
     display: flex;
-    justify-content: center;
     flex-direction: column;
+    align-items: center;
 }
-
 .principal__conteudo {
-    width: 100%;
-    box-sizing: border-box;
     display: flex;
-    gap: 20px;
     flex-direction: column;
+    justify-content: center;
+    gap: 15px;
+    box-sizing: border-box;
     padding: 2%;
-    text-align: justify;
-    font-family: var(--font-texto);
+    width: 70%;
 }
-
 .principal__conteudo__titulo {
     text-align: center;
     font-family: var(--font-titulo);
-    font-size: 50px;
+    font-size: 60px;
     color: var(--cor-secundaria);
 }
-
 .principal__conteudo__subtitulo {
     text-align: center;
     font-family: var(--font-titulo);
 }
-
+.principal__conteudo__texto{
+    font-family: var(--font-texto);
+    text-align: justify;
+}
 .principal__imagens {
+    width: 100%;
     display: flex;
     padding: 2%;
-    align-items: center;
-    justify-content: space-evenly;
+    align-items: stretch;
+    justify-content: center;
     box-sizing: border-box;
-
+    gap: 10px;
 }
-
 .principal__imagens__img {
     width: 350px;
-    margin: 20px;
+    border-radius: 10px;
 }
-
 .rodape {
     padding: 2%;
     background-color: #000000;
     font-family: var(--font-menu);
 }
-
 .rodape__texto {
     text-align: center;
 }
