--- a/styles/style.css
+++ b/styles/style.css
@@ -15,39 +15,47 @@
     --cor-texto: #F3EFE0;
 }
 
-* { /*reset CSS*/
+* {
+    /*reset CSS*/
     margin: 0;
     padding: 0;
 }
+
 body {
     background-color: var(--cor-primaria);
     color: var(--cor-texto);
     box-sizing: border-box;
 }
+
 .cabecalho {
     display: flex;
     justify-content: center;
     padding: 2%;
     background-color: #000000;
 }
+
 .cabecalho__menu {
     display: flex;
     gap: 50px;
 }
+
 .cabecalho__menu__link {
     text-decoration: none;
     font-family: var(--font-menu);
     font-size: 25px;
     color: var(--cor-secundaria);
 }
+
 .cabecalho__menu__link:hover {
     color: #FFFFFF;
 }
-.principal { 
+
+.principal {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 .principal__conteudo {
     display: flex;
     flex-direction: column;
@@ -57,20 +65,25 @@ body {
     padding: 2%;
     width: 70%;
 }
+
 .principal__conteudo__titulo {
     text-align: center;
     font-family: var(--font-titulo);
     font-size: 60px;
     color: var(--cor-secundaria);
 }
+
 .principal__conteudo__subtitulo {
     text-align: center;
     font-family: var(--font-titulo);
 }
-.principal__conteudo__texto{
+
+.principal__conteudo__texto {
     font-family: var(--font-texto);
     text-align: justify;
+    line-height: 24px;
 }
+
 .principal__imagens {
     width: 100%;
     display: flex;
@@ -80,15 +93,50 @@ body {
     box-sizing: border-box;
     gap: 10px;
 }
+
 .principal__imagens__img {
     width: 350px;
     border-radius: 10px;
 }
+
 .rodape {
     padding: 2%;
     background-color: #000000;
     font-family: var(--font-menu);
 }
+
 .rodape__texto {
     text-align: center;
+}
+
+/*--------------- Dicas ------------------*/
+
+.principal__dicas {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+    width: 40%;
+}
+
+.principal__dicas__titulo {
+    font-family: var(--font-titulo);
+    font-size: 30px;
+}
+
+.principal__dicas__texto {
+    text-align: justify;
+    font-family: var(--font-texto);
+    font-size: 20px;
+    padding-bottom: 1%;
+    border-bottom: solid 1px var(--cor-secundaria);
+    display: flex;
+    line-height: 32px;
+}
+
+.principal__dicas__img {
+    width: 200px;
+    height: 200px;
+    margin: 2%;
+    opacity: 0.7;
 }
